# MENBSIM

./: .gitignore  CMakeLists.txt  declaration.txt  injectdeclaration.bash  readme.md  run.sh
ext/bench/: bench.cpp  bench.hpp  timer.hpp
include/: benchdec.hh  cmdparser.hh  const.hh  forcesolver.hh  global.hh  inputreader.hh  io.hh  menbsim.hh  simenv.hh
include/octree/: octree.hh  octreenode.hh
include/solver/: forcesolver.hh
scripts/: injectdeclaration.bash  make.sh  plot.py  plot_verify.py  plotdensity.py  run.sh  test.sh  verify.sh
src/: forcesolver.cc  main.cc  main_verify.cc  menbsim.cc  multipolesolver.cc  naivesolver.cc
src/octree/: octree.cc  octreenode.cc
src/solver/: multipolesolver.cc  naivesolver.cc
tests/: test_multipolesolver.cc  test_octree.cc
